--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,28 +11,25 @@ jobs:
     strategy:
       matrix:
         target: [
-          alpha-unknown-linux-gnu,
-          x86_64-unknown-linux-gnu,
-          i386-unknown-linux-gnu,
-          arm-unknown-linux-gnueabi,
-          arm-unknown-linux-gnueabihf,
-          hppa-unknown-linux-gnu,
-          aarch64-unknown-linux-gnu,
-          mips-unknown-linux-gnu,
-          mipsel-unknown-linux-gnu,
-          powerpc-unknown-linux-gnu,
-          s390-unknown-linux-gnu,
-          s390x-unknown-linux-gnu,
-          sparc-unknown-linux-gnu,
-          powerpc64le-unknown-linux-gnu
+          'alpha-unknown-linux-gnu',
+          'x86_64-unknown-linux-gnu',
+          'i386-unknown-linux-gnu',
+          'arm-unknown-linux-gnueabi',
+          'arm-unknown-linux-gnueabihf',
+          'hppa-unknown-linux-gnu',
+          'aarch64-unknown-linux-gnu',
+          'mips-unknown-linux-gnu',
+          'mipsel-unknown-linux-gnu',
+          'powerpc-unknown-linux-gnu',
+          's390-unknown-linux-gnu',
+          's390x-unknown-linux-gnu',
+          'sparc-unknown-linux-gnu',
+          'powerpc64le-unknown-linux-gnu'
         ]
     steps:
     - uses: actions/checkout@main
       with:
         submodules: true
-    - name: Install required dependencies
-      run: |
-        sudo apt-get install --assume-yes libfl-dev
     - name: Build Venti with OBGGCC
       run: |
         source './tools/setup_toolchain.sh'
@@ -42,11 +39,11 @@ jobs:
     - name: Generate tarball
       run: |
         declare tarball_filename='${{ matrix.target }}.tar.xz'
-        tar --directory='/tmp' --create --file=- 'venti' |  xz --threads=0 --compress -9 > "${tarball_filename}"
+        tar --directory='/tmp' --create --file=- 'venti' |  xz --threads='0' --compress -9 > "${tarball_filename}"
         sha256sum "${tarball_filename}" > "${tarball_filename}.sha256"
     - name: Upload artifact
       uses: actions/upload-artifact@main
       with:
         path: |
-          ${{ matrix.target }}.tar.xz
-          ${{ matrix.target }}.tar.xz.sha256
+          '${{ matrix.target }}.tar.xz'
+          '${{ matrix.target }}.tar.xz.sha256'
