--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       id: check-cache
       uses: actions/cache@main
       with:
-        key: gcc-14.2.0
+        key: gcc-15.0.1-0
         lookup-only: true
         path: |
           /tmp/x86_64-linux-gnu.tar.xz
@@ -26,6 +26,24 @@ jobs:
       if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
       run: |
         bash './build.sh' 'native'
+    - name: Create logs
+      if: always()
+      run: |
+        declare logs=''
+        
+        while read file; do
+            logs+="${file} "
+        done <<< $(find "/tmp/"*"/build" -wholename '*/config.log')
+        
+        tar --create --file=- ${logs} | xz --threads='0' --compress -9 > '/tmp/logs.tar.xz'
+    - name: Upload logs
+      if:  always()
+      uses: actions/upload-artifact@main
+      with:
+        name: logs
+        if-no-files-found: error
+        path: |
+            /tmp/logs.tar.xz
     - name: Generate tarball
       if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
       run: |
@@ -45,7 +63,7 @@ jobs:
       if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
       uses: actions/cache@main
       with:
-        key: gcc-14.2.0
+        key: gcc-15.0.1-0
         path: |
           /tmp/x86_64-linux-gnu.tar.xz
           /tmp/x86_64-linux-gnu.tar.xz.sha256
@@ -58,22 +76,58 @@ jobs:
     strategy:
       matrix:
         target: [
-          'ia64-unknown-linux-gnu',
-          'alpha-unknown-linux-gnu',
+          # FreeBSD
+          'x86_64-unknown-freebsd',
+          'aarch64-unknown-freebsd',
+          'i386-unknown-freebsd',
+         
+          # Linux (musl)
+          'aarch64-unknown-linux-musl',
+          'x86_64-unknown-linux-musl',
+          'arm-unknown-linux-musleabihf',
+          'i386-unknown-linux-musl',
+          'armv7l-unknown-linux-musleabihf',
+          
+          # Linux (glibc)
           'x86_64-unknown-linux-gnu',
           'i386-unknown-linux-gnu',
-          'arm-unknown-linux-gnueabi',
           'arm-unknown-linux-gnueabihf',
-          'hppa-unknown-linux-gnu',
           'aarch64-unknown-linux-gnu',
-          'mips-unknown-linux-gnu',
-          'mipsel-unknown-linux-gnu',
-          'powerpc-unknown-linux-gnu',
-          's390-unknown-linux-gnu',
-          's390x-unknown-linux-gnu',
-          'sparc-unknown-linux-gnu',
-          'powerpc64le-unknown-linux-gnu',
-          'mips64el-unknown-linux-gnuabi64'
+          
+          # OpenBSD
+          'x86_64-unknown-openbsd',
+          'i386-unknown-openbsd',
+          'arm-unknown-openbsd',
+          'aarch64-unknown-openbsd',
+          
+          # OpenBSD
+          'x86_64-unknown-openbsd',
+          'i386-unknown-openbsd',
+          'aarch64-unknown-openbsd',
+          'arm-unknown-openbsd',
+          
+          # Haiku
+          'i586-unknown-haiku',
+          'x86_64-unknown-haiku',
+          
+          # SerenityOS
+          'aarch64-unknown-serenity',
+          'x86_64-unknown-serenity',
+          'riscv64-unknown-serenity',
+          
+          # NetBSD
+          'i386-unknown-netbsdelf',
+          'x86_64-unknown-netbsd',
+          
+          # DragonFly BSD
+          'x86_64-unknown-dragonfly',
+          
+          # Android
+          'x86_64-unknown-linux-android',
+          'i686-unknown-linux-android',
+          'arm-unknown-linux-androideabi',
+          'aarch64-unknown-linux-android',
+          'riscv64-unknown-linux-android'
         ]
     steps:
     - uses: actions/checkout@main
@@ -82,7 +136,7 @@ jobs:
     - name: Restore from cache
       uses: actions/cache@main
       with:
-        key: gcc-14.2.0
+        key: gcc-15.0.1-0
         fail-on-cache-miss: true
         path: |
           /tmp/x86_64-linux-gnu.tar.xz
@@ -91,12 +145,139 @@ jobs:
       run: |
         tar --directory='/tmp' --extract --file='/tmp/x86_64-linux-gnu.tar.xz'
         mv '/tmp/venti' '/tmp/venti-toolchain'
-    - name: Build Venti with OBGGCC
+    - name: Cross-compile Venti to ${{ matrix.target }}
       run: |
         source './tools/setup_toolchain.sh'
-        source './submodules/obggcc/tools/setup_toolchain.sh'
+        
+        if [[ '${{ matrix.target }}' == *'-linux-musl'* ]]; then
+            declare -r RAIDEN_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Raiden/releases/latest')")"
+            declare -r RAIDEN_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r RAIDEN_URL="https://github.com/AmanoTeam/Raiden/releases/download/${RAIDEN_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${RAIDEN_URL}" --output "${RAIDEN_TARBALL}"
+            tar --directory="$(dirname "${RAIDEN_TARBALL}")" --extract --file="${RAIDEN_TARBALL}"
+            
+            export RAIDEN_HOME='/tmp/raiden'
+            export PATH="${RAIDEN_HOME}/bin:${PATH}"
+            
+            source "${RAIDEN_HOME}/usr/local/share/raiden/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-freebsd' ]]; then
+            declare -r LOKI_TAG="$(jq --raw-output '.tag_name' <<< "$(curl  --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Loki/releases/latest')")"
+            declare -r LOKI_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r LOKI_URL="https://github.com/AmanoTeam/Loki/releases/download/${LOKI_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --silent --connect-timeout '10' --retry '15' --retry-all-errors --fail --location --url "${LOKI_URL}" --output "${LOKI_TARBALL}"
+            tar --directory="$(dirname "${LOKI_TARBALL}")" --extract --file="${LOKI_TARBALL}"
+            
+            export LOKI_HOME='/tmp/loki'
+            export PATH="${LOKI_HOME}/bin:${PATH}"
+            
+            source "${LOKI_HOME}/usr/local/share/loki/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-linux-gnu'* ]]; then
+            declare -r OBGGCC_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/obggcc/releases/latest')")"
+            declare -r OBGGCC_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r OBGGCC_URL="https://github.com/AmanoTeam/obggcc/releases/download/${OBGGCC_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${OBGGCC_URL}" --output "${OBGGCC_TARBALL}"
+            tar --directory="$(dirname "${OBGGCC_TARBALL}")" --extract --file="${OBGGCC_TARBALL}"
+            
+            export OBGGCC_HOME='/tmp/obggcc'
+            export PATH="${OBGGCC_HOME}/bin:${PATH}"
+            
+            source "${OBGGCC_HOME}/usr/local/share/obggcc/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-openbsd'* ]]; then
+            declare -r ATAR_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Atar/releases/latest')")"
+            declare -r ATAR_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r ATAR_URL="https://github.com/AmanoTeam/Atar/releases/download/${ATAR_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${ATAR_URL}" --output "${ATAR_TARBALL}"
+            tar --directory="$(dirname "${ATAR_TARBALL}")" --extract --file="${ATAR_TARBALL}"
+            
+            export ATAR_HOME='/tmp/atar'
+            export PATH="${ATAR_HOME}/bin:${PATH}"
+            
+            source "${ATAR_HOME}/usr/local/share/atar/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-haiku' ]]; then
+            declare -r SIL_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Sil/releases/latest')")"
+            declare -r SIL_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r SIL_URL="https://github.com/AmanoTeam/Sil/releases/download/${SIL_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${SIL_URL}" --output "${SIL_TARBALL}"
+            tar --directory="$(dirname "${SIL_TARBALL}")" --extract --file="${SIL_TARBALL}"
+            
+            export SIL_HOME='/tmp/sil'
+            export PATH="${SIL_HOME}/bin:${PATH}"
+            
+            source "${SIL_HOME}/usr/local/share/sil/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-serenity' ]]; then
+            declare -r SENNA_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Senna/releases/latest')")"
+            declare -r SENNA_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r SENNA_URL="https://github.com/AmanoTeam/Senna/releases/download/${SENNA_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${SENNA_URL}" --output "${SENNA_TARBALL}"
+            tar --directory="$(dirname "${SENNA_TARBALL}")" --extract --file="${SENNA_TARBALL}"
+            
+            export SENNA_HOME='/tmp/senna'
+            export PATH="${SENNA_HOME}/bin:${PATH}"
+            
+            source "${SENNA_HOME}/usr/local/share/senna/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-netbsd'* ]]; then
+            declare -r DAKINI_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Dakini/releases/latest')")"
+            declare -r DAKINI_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r DAKINI_URL="https://github.com/AmanoTeam/Dakini/releases/download/${DAKINI_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${DAKINI_URL}" --output "${DAKINI_TARBALL}"
+            tar --directory="$(dirname "${DAKINI_TARBALL}")" --extract --file="${DAKINI_TARBALL}"
+            
+            export DAKINI_HOME='/tmp/dakini'
+            export PATH="${DAKINI_HOME}/bin:${PATH}"
+            
+            source "${DAKINI_HOME}/usr/local/share/dakini/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-dragonfly' ]]; then
+            declare -r VENTI_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Venti/releases/latest')")"
+            declare -r VENTI_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r VENTI_URL="https://github.com/AmanoTeam/Venti/releases/download/${VENTI_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${VENTI_URL}" --output "${VENTI_TARBALL}"
+            tar --directory="$(dirname "${VENTI_TARBALL}")" --extract --file="${VENTI_TARBALL}"
+            
+            export VENTI_HOME='/tmp/venti'
+            export PATH="${VENTI_HOME}/bin:${PATH}"
+            
+            source "${VENTI_HOME}/usr/local/share/venti/autotools/${{ matrix.target }}.sh"
+        elif [[ '${{ matrix.target }}' == *'-android'* ]]; then
+            declare -r PINO_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Pino/releases/latest')")"
+            declare -r PINO_TARBALL='/tmp/toolchain.tar.xz'
+            declare -r PINO_URL="https://github.com/AmanoTeam/Pino/releases/download/${PINO_TAG}/x86_64-unknown-linux-gnu.tar.xz"
+            
+            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${PINO_URL}" --output "${PINO_TARBALL}"
+            tar --directory="$(dirname "${PINO_TARBALL}")" --extract --file="${PINO_TARBALL}"
+            
+            export PINO_HOME='/tmp/pino'
+            export PATH="${PINO_HOME}/bin:${PATH}"
+            
+            source "${PINO_HOME}/usr/local/share/pino/autotools/${{ matrix.target }}.sh"
+        fi
         
         bash './build.sh' '${{ matrix.target }}'
+    - name: Create logs
+      if: always()
+      run: |
+        declare logs=''
+        
+        while read file; do
+            logs+="${file} "
+        done <<< $(find "/tmp/"*"/build" -wholename '*/config.log')
+        
+        tar --create --file=- ${logs} | xz --threads='0' --compress -9 > '/tmp/logs.tar.xz'
+    - name: Upload logs
+      if:  always()
+      uses: actions/upload-artifact@main
+      with:
+        name: ${{ matrix.target }}-logs
+        if-no-files-found: error
+        path: |
+            /tmp/logs.tar.xz
     - name: Generate tarball
       run: |
         declare tarball_filename='/tmp/${{ matrix.target }}.tar.xz'
