Update CMake and Autotools toolchains

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
       id: check-cache
       uses: actions/cache@main
       with:
-        key: gcc-15.0
+        key: gcc-15.2.1
         lookup-only: true
         path: |
           /tmp/x86_64-linux-gnu.tar.xz
@@ -63,7 +63,7 @@ jobs:
       if: ${{ steps.check-cache.outputs.cache-hit != 'true' }}
       uses: actions/cache@main
       with:
-        key: gcc-15.0
+        key: gcc-15.2.1
         path: |
           /tmp/x86_64-linux-gnu.tar.xz
           /tmp/x86_64-linux-gnu.tar.xz.sha256
@@ -90,9 +90,9 @@ jobs:
           # Linux (musl)
           'aarch64-unknown-linux-musl',
           'x86_64-unknown-linux-musl',
-          'arm-unknown-linux-musleabihf',
+          'armv6-unknown-linux-musleabihf',
+          'armv7-unknown-linux-musleabihf',
           'i386-unknown-linux-musl',
-          'armv7l-unknown-linux-musleabihf',
           
           # FreeBSD
           'x86_64-unknown-freebsd',
@@ -104,23 +104,12 @@ jobs:
           'x86_64-unknown-netbsd',
           'aarch64-unknown-netbsd',
           
-          # OpenBSD
-          'x86_64-unknown-openbsd',
-          'i386-unknown-openbsd',
-          'aarch64-unknown-openbsd',
-          'arm-unknown-openbsd',
-          
           # DragonFly BSD
           'x86_64-unknown-dragonfly',
           
           # Haiku
           'i586-unknown-haiku',
           'x86_64-unknown-haiku',
-          
-          # Serenity
-          'x86_64-unknown-serenity',
-          'aarch64-unknown-serenity',
-          'riscv64-unknown-serenity',
           
           # Android
           'x86_64-unknown-linux-android',
@@ -139,7 +128,7 @@ jobs:
     - name: Restore from cache
       uses: actions/cache@main
       with:
-        key: gcc-15.0
+        key: gcc-15.2.1
         fail-on-cache-miss: true
         path: |
           /tmp/x86_64-linux-gnu.tar.xz
@@ -152,32 +141,32 @@ jobs:
       run: |
         source './tools/setup_toolchain.sh'
         
-        if [[ '${{ matrix.target }}' == *'-linux-musl'* ]]; then
-            declare -r RAIDEN_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Raiden/releases/latest')")"
+        if [[ '${{ matrix.target }}' = *'-linux-musl'* ]]; then
+            declare -r RAIDEN_TAG='gcc-15'
             declare -r RAIDEN_TARBALL='/tmp/toolchain.tar.xz'
             declare -r RAIDEN_URL="https://github.com/AmanoTeam/Raiden/releases/download/${RAIDEN_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${RAIDEN_URL}" --output "${RAIDEN_TARBALL}"
+            curl --show-error --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${RAIDEN_URL}" --output "${RAIDEN_TARBALL}"
             tar --directory="$(dirname "${RAIDEN_TARBALL}")" --extract --file="${RAIDEN_TARBALL}"
             
             export RAIDEN_HOME='/tmp/raiden'
             export PATH="${RAIDEN_HOME}/bin:${PATH}"
             
             source "${RAIDEN_HOME}/usr/local/share/raiden/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-linux-gnu'* ]]; then
-            declare -r OBGGCC_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/obggcc/releases/latest')")"
+        elif [[ '${{ matrix.target }}' = *'-linux-gnu'* ]]; then
+            declare -r OBGGCC_TAG='gcc-15'
             declare -r OBGGCC_TARBALL='/tmp/toolchain.tar.xz'
             declare -r OBGGCC_URL="https://github.com/AmanoTeam/obggcc/releases/download/${OBGGCC_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${OBGGCC_URL}" --output "${OBGGCC_TARBALL}"
+            curl --show-error --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${OBGGCC_URL}" --output "${OBGGCC_TARBALL}"
             tar --directory="$(dirname "${OBGGCC_TARBALL}")" --extract --file="${OBGGCC_TARBALL}"
             
             export OBGGCC_HOME='/tmp/obggcc'
             export PATH="${OBGGCC_HOME}/bin:${PATH}"
             
             source "${OBGGCC_HOME}/usr/local/share/obggcc/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-freebsd' ]]; then
-            declare -r LOKI_TAG="$(jq --raw-output '.tag_name' <<< "$(curl  --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Loki/releases/latest')")"
+        elif [[ '${{ matrix.target }}' = *'-freebsd' ]]; then
+            declare -r LOKI_TAG='gcc-15'
             declare -r LOKI_TARBALL='/tmp/toolchain.tar.xz'
             declare -r LOKI_URL="https://github.com/AmanoTeam/Loki/releases/download/${LOKI_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
@@ -188,79 +177,55 @@ jobs:
             export PATH="${LOKI_HOME}/bin:${PATH}"
             
             source "${LOKI_HOME}/usr/local/share/loki/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-netbsd'* ]]; then
-            declare -r DAKINI_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Dakini/releases/latest')")"
+        elif [[ '${{ matrix.target }}' = *'-netbsd'* ]]; then
+            declare -r DAKINI_TAG='gcc-15'
             declare -r DAKINI_TARBALL='/tmp/toolchain.tar.xz'
             declare -r DAKINI_URL="https://github.com/AmanoTeam/Dakini/releases/download/${DAKINI_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${DAKINI_URL}" --output "${DAKINI_TARBALL}"
+            curl --show-error --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${DAKINI_URL}" --output "${DAKINI_TARBALL}"
             tar --directory="$(dirname "${DAKINI_TARBALL}")" --extract --file="${DAKINI_TARBALL}"
             
             export DAKINI_HOME='/tmp/dakini'
             export PATH="${DAKINI_HOME}/bin:${PATH}"
             
             source "${DAKINI_HOME}/usr/local/share/dakini/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-openbsd'* ]]; then
-            declare -r ATAR_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Atar/releases/latest')")"
-            declare -r ATAR_TARBALL='/tmp/toolchain.tar.xz'
-            declare -r ATAR_URL="https://github.com/AmanoTeam/Atar/releases/download/${ATAR_TAG}/x86_64-unknown-linux-gnu.tar.xz"
-            
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${ATAR_URL}" --output "${ATAR_TARBALL}"
-            tar --directory="$(dirname "${ATAR_TARBALL}")" --extract --file="${ATAR_TARBALL}"
-            
-            export ATAR_HOME='/tmp/atar'
-            export PATH="${ATAR_HOME}/bin:${PATH}"
-            
-            source "${ATAR_HOME}/usr/local/share/atar/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-dragonfly' ]]; then
-            # declare -r VENTI_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Venti/releases/latest')")"
+        elif [[ '${{ matrix.target }}' = *'-dragonfly' ]]; then
+            # declare -r VENTI_TAG='gcc-15'
             # declare -r VENTI_TARBALL='/tmp/toolchain.tar.xz'
             # declare -r VENTI_URL="https://github.com/AmanoTeam/Venti/releases/download/${VENTI_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
-            # curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${VENTI_URL}" --output "${VENTI_TARBALL}"
+            # curl --show-error --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${VENTI_URL}" --output "${VENTI_TARBALL}"
             # tar --directory="$(dirname "${VENTI_TARBALL}")" --extract --file="${VENTI_TARBALL}"
             
             # export VENTI_HOME='/tmp/venti'
             export PATH="${VENTI_HOME}/bin:${PATH}"
             
             source "${VENTI_HOME}/usr/local/share/venti/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-haiku' ]]; then
-            declare -r SIL_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Sil/releases/latest')")"
+        elif [[ '${{ matrix.target }}' = *'-haiku' ]]; then
+            declare -r SIL_TAG='gcc-15'
             declare -r SIL_TARBALL='/tmp/toolchain.tar.xz'
             declare -r SIL_URL="https://github.com/AmanoTeam/Sil/releases/download/${SIL_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${SIL_URL}" --output "${SIL_TARBALL}"
+            curl --show-error --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${SIL_URL}" --output "${SIL_TARBALL}"
             tar --directory="$(dirname "${SIL_TARBALL}")" --extract --file="${SIL_TARBALL}"
             
             export SIL_HOME='/tmp/sil'
             export PATH="${SIL_HOME}/bin:${PATH}"
             
             source "${SIL_HOME}/usr/local/share/sil/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-serenity' ]]; then
-            declare -r SENNA_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Senna/releases/latest')")"
-            declare -r SENNA_TARBALL='/tmp/toolchain.tar.xz'
-            declare -r SENNA_URL="https://github.com/AmanoTeam/Senna/releases/download/${SENNA_TAG}/x86_64-unknown-linux-gnu.tar.xz"
-            
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${SENNA_URL}" --output "${SENNA_TARBALL}"
-            tar --directory="$(dirname "${SENNA_TARBALL}")" --extract --file="${SENNA_TARBALL}"
-            
-            export SENNA_HOME='/tmp/senna'
-            export PATH="${SENNA_HOME}/bin:${PATH}"
-            
-            source "${SENNA_HOME}/usr/local/share/senna/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-android'* ]]; then
-            declare -r PINO_TAG="$(jq --raw-output '.tag_name' <<< "$(curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --url 'https://api.github.com/repos/AmanoTeam/Pino/releases/latest')")"
+        elif [[ '${{ matrix.target }}' = *'-android'* ]]; then
+            declare -r PINO_TAG='gcc-15'
             declare -r PINO_TARBALL='/tmp/toolchain.tar.xz'
             declare -r PINO_URL="https://github.com/AmanoTeam/Pino/releases/download/${PINO_TAG}/x86_64-unknown-linux-gnu.tar.xz"
             
-            curl --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${PINO_URL}" --output "${PINO_TARBALL}"
+            curl --show-error --connect-timeout '10' --retry '15' --retry-all-errors --fail --silent --location --url "${PINO_URL}" --output "${PINO_TARBALL}"
             tar --directory="$(dirname "${PINO_TARBALL}")" --extract --file="${PINO_TARBALL}"
             
             export PINO_HOME='/tmp/pino'
             export PATH="${PINO_HOME}/bin:${PATH}"
             
             source "${PINO_HOME}/usr/local/share/pino/autotools/${{ matrix.target }}.sh"
-        elif [[ '${{ matrix.target }}' == *'-darwin' ]]; then
+        elif [[ '${{ matrix.target }}' = *'-darwin' ]]; then
             curl \
                 --silent \
                 --show-error \
@@ -318,12 +283,12 @@ jobs:
         uses: softprops/action-gh-release@master
         with:
           tag_name: gcc-15
-          name: GCC 15.2.0
+          name: GCC 15.2.1
           files: ./*/*-unknown-*.tar.xz*
           draft: false
           prerelease: false
           fail_on_unmatched_files: true
-          body: "* Update to GCC 15.2.0"
+          body: "* Update to GCC 15.2.1"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
